[tool.poetry]
name = "interactivepdfreader"
version = "0.1.0"
description = ""
authors = ["Vatsal Raicha <vatsalraicha@outlook.com>"]
readme = "README.md"
packages = [{include = "interactivepdfreader", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.35.7"
chroma = "^0.2.0"
streamlit = "^1.36.0"
langchain = "^0.2.6"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
hvplot = "^0.10.0"
altair = "^5.3.0"
python-dotenv = "^1.0.1"
pypdf2 = "^3.0.1"
langchain-community = "^0.2.6"
pypdf = "^4.2.0"
sentence-transformers = "^3.0.1"
chromadb = "^0.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
